--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,11 @@
 name    = spdxl
 author  = Jeremiah C. Foster <jeremiah.foster@pelagicore.com>
-license = GPL_3
-copyright_holder = Pelagicore
-copyright_year   = 2015
 
-version = 0.001
+version = 0.1.1
 
-[@Basic]
+[Prereqs]
+
+[PruneCruft]
+
+[@Git]
+
