Working on creating a distribution. Added Travis YAML file.

--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,16 @@
 name    = spdxl
 author  = Jeremiah C. Foster <jeremiah.foster@pelagicore.com>
-
+copyright_holder = Jeremiah C. Foster
+license = GPLv3
 version = 0.1.1
 
 [Prereqs]
+Path::Tiny    = 0
+File::Compare = 0
+File::Slurp   = 0
+Getopt::Long::Descriptive = 0
+Pod::Usage    = 0
+Term::ANSIColor = 0
 
 [PruneCruft]
 
