Adding first test (boilerplate) working on creating a module.

--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,12 @@
 name    = spdxl
 author  = Jeremiah C. Foster <jeremiah.foster@pelagicore.com>
 copyright_holder = Jeremiah C. Foster
-license = GPLv3
+license = gpl
 version = 0.1.1
+
+
+[@Basic]
+
 
 [Prereqs]
 Path::Tiny    = 0
