Bringing build tooling in, README.md up to best practices.

--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,7 @@ version = 0.1.1
 
 [@Basic]
 
+[AutoPrereqs]
 
 [Prereqs]
 Path::Tiny    = 0
@@ -15,6 +16,7 @@ File::Slurp   = 0
 Getopt::Long::Descriptive = 0
 Pod::Usage    = 0
 Term::ANSIColor = 0
+Text::Xslate = 0
 
 [PruneCruft]
 
